fixed alignment issue

--- a/register/static/register/scss/_custom.scss
+++ b/register/static/register/scss/_custom.scss
@@ -17,7 +17,7 @@ body.qrcode {
             @include sm {
                 flex-direction: row;
                 align-items: center;
-                padding: 10px 10px 10px 15px;
+                padding: 10px 10px 10px 18px;
             }
             h1 {
                 flex-basis: 60%;
